to fix the section space on mobile

--- a/templates/css/mobile.css
+++ b/templates/css/mobile.css
@@ -342,9 +342,9 @@
         margin-bottom: 10px;
         height: auto;
     }
-    section.section_intro {
-        /*height: auto;*/
-    }
+    /* section.section_intro {
+        height: auto;
+    } */
     .list_img_small_blur {
         margin-top: 0;
     }
@@ -556,7 +556,8 @@
         margin-bottom: 10px;
     }
     .content_profile section {
-        margin-bottom: 30px;
+        margin: 0px auto;
+        padding-bottom: 0px;
     }
     .table_infoProfile tr th {
         width: 50%;
